# SandPile

./: CMakeLists.txt  README.md  install.sh  main.cpp
.github/workflows/: ci_tests.yml
lib/: CMakeLists.txt
lib/basic/: CMakeLists.txt  basic_functions.cpp  basic_functions.hpp  queue.cpp  queue.h
lib/bmp_writer/: CMakeLists.txt  bmp_writer.cpp  bmp_writer.hpp
lib/field/: CMakeLists.txt  coordinates_field.cpp  coordinates_field.hpp  queue.cpp  queue.hpp  tsv_handler.cpp  tsv_handler.hpp
lib/parser/: CMakeLists.txt  argument.hpp  arguments_parser.cpp  arguments_parser.hpp  bool_argument.cpp  bool_argument.hpp  composite_argument.cpp  composite_argument.hpp  long_argument.cpp  long_argument.hpp  string_argument.cpp  string_argument.hpp
lib/sand_pile/: CMakeLists.txt  sand_pile.cpp  sand_pile.hpp
lib/vector/: CMakeLists.txt  coordinates_vector.cpp  coordinates_vector.hpp
tests/test1/: test1.tsv
tests/test2/: test2.tsv
tests/test3/: test3.tsv
tests/test4/: test4.tsv
tests/test5/: test5.tsv
